--- a/about.html
+++ b/about.html
@@ -17,11 +17,11 @@
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
-  <a href="about.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-user w3-xxlarge"></i>
     <p>ABOUT</p>
   </a>
-  <a href="homekarya.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="Homekarya.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>KARYA</p>
   </a>
@@ -35,11 +35,11 @@
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
-  <a href="about.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-user w3-xxlarge"></i>
     <p>ABOUT</p>
   </a>
-  <a href="homekarya.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="Homekarya.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>KARYA</p>
   </a>
@@ -116,7 +116,7 @@
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="Jesuit Louis-le-Grand.jpg" style="width:100%"> <p>Tempat belajar voltaire (Jesuit Louis-le-Grand)</p>
+        <img src="Jesuit-Louis-le-Grand.jpg" style="width:100%"> <p>Tempat belajar voltaire (Jesuit Louis-le-Grand)</p>
         <img src="kekasih-voltaire.jpg" style="width:100%"> <p>Kekasih voltaire (Madame du Chatelet)</p>
         <img src="/w3images/sailboat.jpg" style="width:100%">
       </div>
