--- a/henri.html
+++ b/henri.html
@@ -57,14 +57,14 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
-  <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo"><span class="w3-hide-small">La</span> Henriade</h1>
-    <p>1723</p>
+  <header class="w3-container w3-padding-32 w3-center w3-white" id="home">
+    <h1 class="w3-jumbo">Voltaire's Book</h1>
+    <p style="background-color:white;font-size:150%;font-color:grey;"> Frenc Enlightenment Writer </p>
     <img src="karya2.jpg" alt="boy" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- About Section -->
-  <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
+  <div class="w3-content w3-justify w3-text-white w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">La Henriade</h2>
 
     <hr style="width:200px" class="w3-opacity">
