--- a/zadig.html
+++ b/zadig.html
@@ -59,14 +59,14 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-white" id="home">
-    <h1 class="w3-jumbo"><span class="w3-hide-small">Zadig</span> (Voltaire).</h1>
-    <p>1747.</p>
+    <h1 class="w3-jumbo">Voltaire's Book</h1>
+    <p style="background-color:white;font-size:150%;font-color:grey;"> Frenc Enlightenment Writer </p>
     <img src="karya1.jpg">
   </header>
 
   <!-- About Section -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-    <h2 class="w3-text-light-grey">Zadig</h2>
+    <h2 class="w3-text-light-grey">Zadig 1747</h2>
     <hr style="width:200px" class="w3-opacity">
     <p>Zadig ou la Destinée (Zadig, atau The Book of Fate; 1747) adalah sebuah novel dan karya fiksi filosofis oleh penulis Pencerahan Voltaire. Ini bercerita tentang Zadig, seorang filsuf di Babylonia kuno. Penulis tidak mencoba keakuratan historis, dan beberapa masalah yang dihadapi Zadig adalah rujukan terselubung untuk masalah sosial dan politik di zaman Voltaire sendiri.
 
