--- a/index.html
+++ b/index.html
@@ -73,32 +73,26 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="biodata">
     <h2 class="w3-text-light-grey">Tentang Voltaire</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>François-Marie Arouet atau yang lebih dikenal dengan nama penanya Voltaire, adalah penulis dan filsuf Prancis pada Era Pencerahan. Ia lahir pada tanggal 21 November 1694. Ia adalah pendukung vokal terhadap reformasi sosial walaupun Prancis saat itu menerapkan aturan sensor ketat dan ancaman hukuman yang keras bagi pelanggarnya. Ia sering menggunakan karyanya untuk mengkritik dogma gereja dan institusi Prancis pada saat itu. Meskipun Voltaire dianggap sebagai salah satu tokoh yang paling berpengaruh pada zamannya, sebenarnya ia tidak mendirikan atau mengungkapkan suatu pemikiran filsafat apapun yang berbeda dari filsuf-filsuf sezamannya. Ia hanyalah juru bicara zaman Pencerahan (Aufklärung) lewat tulisan-tulisannya yang terpublikasi dengan baik dan mendapatkan sambutan serta pengakuan luas dari masyarakat. Voltaire dikenal tulisan filsafatnya yang tajam, dukungan terhadap hak-hak manusia dan kebebasan sipil, termasuk kebebasan beragama dan hak mendapatkan pengadilan yang patut (Inggris: fair trial). 
-    </p>
-  </div>
-
-  <!-- Karya Section -->
-  <div>
-    <p>Banyak sekali buku karya penulis dari Prancis ini. Baik itu buku, puisi hingga drama. Buku ini berisi analisis tentang Voltaire dan karya-karyanya, khususnya tiga buah dongengnya yang terkenal (Candide, Zadig, dan Si Lugu). Secara spesifik, disertasi beliau membahas ironi dalam ketiga dongeng Voltaire tersebut. Sebenarnya Voltaire banyak pula menulis karya-karya lain, seperti puisi, drama, esai, sejarah, namun ia justru terkenal oleh dongeng-dongengnya yang semula dianggap sebagai karya sampingan penghibur hati, atau alat tersamar manakala ia tidak dapat mengkritik keadaan secara terbuka. Dongeng-dongeng Voltaire banyak dikenal orang karena sifatnya yang mengena atas kritikan sosial saat itu dan isinya yang tetap aktual sampai sekarang karena menyangkut masalah manusia yang universal.
-    Seperti umumnya tulisan Husen yang sistematis dalam hal konteks, buku ini dibuka dengan pendahuluan mengenai keadaan Perancis abad ke-18, yaitu periode saat Voltaire hidup dan berkarya. Meninjau keadaan politik dan perubahan-perubahan di Eropa pada saat itu, serta perkembangan pemikiran di Perancis, kita seakan diajak mengunjungi milieu dan konteks sejarah saat Voltaire hidup. Dilanjutkan dengan ulasan mengenai riwayat hidup Voltaire, yang mengajak kita mengenal Voltaire secara lebih biografis.</p>
-
-    <p>Kemudian untuk memudahkan pembaca yang mungkin belum mengenal Voltaire, secara singkat diulas empat dongeng filsafat Voltaire, mulai dari proses penyusunan, latar belakang dan inti pesan yang hendak disampaikan. Selain Zadig, Candide dan Si Lugu, ada satu dongeng lagi, yaitu Micromegas, yang turut diulas disini. Dongeng-dongeng filosofis Voltaire memang ditulis pada usianya yang telah matang, ketika Voltaire telah merasakan asam garam kehidupan. Reaksi terhadap apa yang terjadi di masyarakat, kegiatan politik atau sastra, bergema dalam dongneng-dongengnya, dan ditulis dalam gaya yang kocak, ringan, namun penuh dengan ironi. Menghibur sekaligus mengkritik. Dengan dongeng-dongengnya itu secara tersirat ia mengajak pembaca untuk bersikap toleran, adil dan giat bekerja.</p>
-
-    <p>Intisari pemikiran Voltaire, yang dipetik dari karya dongeng-dongeng filsafatnya, dibahas Husen dalam tema-tema sebagai berikut:
-
-      <p><li> Hubungan antar manusia </li> </p>
-
-      <p><li> Rohaniwan dan lembaga agama</li></p>
-
-      <p><li> Kaum  bangsawan dan tokoh politik</li></p>
-
-      <p><li> Tokoh perempuan</li></p>
-
-      <p><li> Teks-teks satire tentang individu dan masyarakat</li></p>
-      <p><li> Kekhasan gejala budaya zaman Voltaire</li></p>
-
-      <p><li> Filsafat hidup dan diskusi metafisika</li></p>
-    </p>
+    <p>François-Marie Arouet atau yang lebih dikenal dengan nama penanya Voltaire, adalah penulis dan filsuf Prancis pada Era Pencerahan. Ia lahir pada tanggal 21 November 1694. Ia adalah pendukung vokal terhadap reformasi sosial walaupun Prancis saat itu menerapkan aturan sensor ketat dan ancaman hukuman yang keras bagi pelanggarnya. Ia sering menggunakan karyanya untuk mengkritik dogma gereja dan institusi Prancis pada saat itu. Meskipun Voltaire dianggap sebagai salah satu tokoh yang paling berpengaruh pada zamannya, sebenarnya ia tidak mendirikan atau mengungkapkan suatu pemikiran filsafat apapun yang berbeda dari filsuf-filsuf sezamannya. Ia hanyalah juru bicara zaman Pencerahan (Aufklärung) lewat tulisan-tulisannya yang terpublikasi dengan baik dan mendapatkan sambutan serta pengakuan luas dari masyarakat. Voltaire dikenal tulisan filsafatnya yang tajam, dukungan terhadap hak-hak manusia dan kebebasan sipil, termasuk kebebasan beragama dan hak mendapatkan pengadilan yang patut (Inggris: fair trial). </p>
+     <p>Banyak sekali buku karya penulis dari Prancis ini. Baik itu buku, puisi hingga drama. Buku ini berisi analisis tentang Voltaire dan karya-karyanya, khususnya tiga buah dongengnya yang terkenal (Candide, Zadig, dan Si Lugu). Secara spesifik, disertasi beliau membahas ironi dalam ketiga dongeng Voltaire tersebut. Sebenarnya Voltaire banyak pula menulis karya-karya lain, seperti puisi, drama, esai, sejarah, namun ia justru terkenal oleh dongeng-dongengnya yang semula dianggap sebagai karya sampingan penghibur hati, atau alat tersamar manakala ia tidak dapat mengkritik keadaan secara terbuka. Dongeng-dongeng Voltaire banyak dikenal orang karena sifatnya yang mengena atas kritikan sosial saat itu dan isinya yang tetap aktual sampai sekarang karena menyangkut masalah manusia yang universal.
+	    Seperti umumnya tulisan Husen yang sistematis dalam hal konteks, buku ini dibuka dengan pendahuluan mengenai keadaan Perancis abad ke-18, yaitu periode saat Voltaire hidup dan berkarya. Meninjau keadaan politik dan perubahan-perubahan di Eropa pada saat itu, serta perkembangan pemikiran di Perancis, kita seakan diajak mengunjungi milieu dan konteks sejarah saat Voltaire hidup. Dilanjutkan dengan ulasan mengenai riwayat hidup Voltaire, yang mengajak kita mengenal Voltaire secara lebih biografis.</p>
+	
+	    <p>Kemudian untuk memudahkan pembaca yang mungkin belum mengenal Voltaire, secara singkat diulas empat dongeng filsafat Voltaire, mulai dari proses penyusunan, latar belakang dan inti pesan yang hendak disampaikan. Selain Zadig, Candide dan Si Lugu, ada satu dongeng lagi, yaitu Micromegas, yang turut diulas disini. Dongeng-dongeng filosofis Voltaire memang ditulis pada usianya yang telah matang, ketika Voltaire telah merasakan asam garam kehidupan. Reaksi terhadap apa yang terjadi di masyarakat, kegiatan politik atau sastra, bergema dalam dongneng-dongengnya, dan ditulis dalam gaya yang kocak, ringan, namun penuh dengan ironi. Menghibur sekaligus mengkritik. Dengan dongeng-dongengnya itu secara tersirat ia mengajak pembaca untuk bersikap toleran, adil dan giat bekerja.</p>
+	
+	    <p>Intisari pemikiran Voltaire, yang dipetik dari karya dongeng-dongeng filsafatnya, dibahas Husen dalam tema-tema sebagai berikut:
+	
+	      <p><li> Hubungan antar manusia </li> </p>
+	
+	      <p><li> Rohaniwan dan lembaga agama</li></p>
+	
+	      <p><li> Kaum  bangsawan dan tokoh politik</li></p>
+	
+	      <p><li> Tokoh perempuan</li></p>
+	
+	      <p><li> Teks-teks satire tentang individu dan masyarakat</li></p>
+	      <p><li> Kekhasan gejala budaya zaman Voltaire</li></p>
+	
+	      <p><li> Filsafat hidup dan diskusi metafisika</li></p>
   </div>
 
   <!-- Portfolio Section -->
@@ -110,16 +104,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="voltaire.jpg" style="width:100%">
-        <img src="kekasih-voltaire.jpg" style="width:100%">
-        <img src="Si Lugu.jpg" style="width:100%">
+        <img src="voltaire.jpg" style="width:80%">
+        <img src="kekasih-voltaire.jpg" style="width:80%">
+        <img src="Si Lugu.jpg" style="width:80%">
       </div>
 
       <div class="w3-half">
-        <img src="zadig.jpg" style="width:100%">
-        <img src="candide.jpg" style="width:100%">
-        <img src="l'Ingenu.jpg" style="width:100%">
-        <img src="suratantakdir.jpg" style="width:100%">
+        <img src="zadig.jpg" style="width:80%">
+        <img src="candide.jpg" style="width:80%">
+        <img src="l'Ingenu.jpg" style="width:80%">
+        <img src="suratantakdir.jpg" style="width:80%">
       </div>
     <!-- End photo grid -->
     </div>
