--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
-  <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
+  <header class="w3-container w3-padding-32 w3-center w3-white" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small"></span>VOLTAIRE</h1>
     <p><li>Aida.</li></p>
     <p><li>Azzahra</li></p>
@@ -107,12 +107,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <img src="voltaire.jpg" style="width:80%">
         <img src="kekasih-voltaire.jpg" style="width:80%">
         <img src="Si Lugu.jpg" style="width:80%">
+	<img src="l'Ingenu.jpg" style="width:80%">
       </div>
 
       <div class="w3-half">
         <img src="zadig.jpg" style="width:80%">
         <img src="candide.jpg" style="width:80%">
-        <img src="l'Ingenu.jpg" style="width:80%">
         <img src="suratantakdir.jpg" style="width:80%">
       </div>
     <!-- End photo grid -->
