--- a/index.html
+++ b/index.html
@@ -59,14 +59,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-white" id="home">
-    <h1 class="w3-jumbo"><span class="w3-hide-small"></span>VOLTAIRE</h1>
-    <p><li>Aida.</li></p>
-    <p><li>Azzahra</li></p>
-    <p><li>Azriel</li></p>
-    <p><li>Jeneva</li></p>
-    <p><li>Puji</li></p>
-    <p><li>Syahril</li></p>
-    <img src="/w3images/man_smoke.jpg" alt="boy" class="w3-image" width="992" height="1108">
+    <h1 class="w3-jumbo"><span class="w3-hide-small">Voltaire's</span> Creation</h1>
+    <p style="background-color:white;font-size:150%;font-color:grey;"> Frenc Enlightenment Writer </p>
   </header>
 
   <!-- Biodata Section -->
@@ -122,7 +116,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!--footer-->
     <div class="footer">
 
-    <footer class="w3-container w3-dark-grey" style="padding:32px">
+    <footer class="w3-container w3-dark-grey" w3-center style="padding:32px">
   <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
   
   <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
@@ -131,6 +125,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
   <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
     <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+	    
+	    <p>@Created by Aida, Az Zahra, Azriel, Jeneva, Puji, Sayhriliandika</p>
 </footer>
   
   
