--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
     <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
 	    
-	    <p>@Created by Aida, Az Zahra, Azriel, Jeneva, Puji, Sayhriliandika</p>
+	    <p>@Created by Aida, Az Zahra, Azriel, Jeneva, Puji, Syahriliandika</p>
 </footer>
   
   
