--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
   <header class="w3-container w3-padding-32 w3-center w3-white" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">Voltaire</span></h1>
     <p style="background-color:white;font-size:150%;font-color:grey;"> Frenc Enlightenment Writer </p>
-    <img src="Voltaire1.png" alt="voltaire" class="w3-image" width="992" height="1108">
+    <img src="Voltaire1.png" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- About Section -->
@@ -100,15 +100,6 @@
               
             </p>
   
-  <!--footer-->
-  <div class="footer"><footer class="w3-container w3-dark-grey w3-center"  style="padding:32px">
-    <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
-    <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
-    <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
-    <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
-    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
-    <p>@Created by Aida, Az Zahra, Azriel, Jeneva, Puji, Syahriliandika</p>
-    </footer>
   
   <!-- Portfolio Section -->
   <div class="w3-padding-64 w3-content" id="photos">
@@ -123,7 +114,15 @@
         
       </div>
               </div>
-
+<!--footer-->
+	  <div class="footer"><footer class="w3-container w3-dark-grey w3-center"  style="padding:32px">
+	    <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
+	    <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
+	    <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
+	    <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
+	    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+	    <p>@Created by Aida, Az Zahra, Azriel, Jeneva, Puji, Syahriliandika</p>
+	    </footer>
    
   
   </div>
