--- a/Homekarya.html
+++ b/Homekarya.html
@@ -111,19 +111,15 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p style="background-color:White;font-size:150%;font-color:Black;"><strong><a href = "henri.html"> Henriade 1723 </a></strong></p>
     <p style="font-size:100%;font-color:white;">Diterjemahkan dari bahasa Inggris-La Henriade adalah puisi epik tahun 1723 yang ditulis oleh penulis dan filsuf Pencerahan Prancis Voltaire. Menurut Voltaire sendiri, puisi tersebut ditulis untuk menghormati kehidupan Henry IV dari Perancis, dan merupakan perayaan hidupnya.<a href = "henri.html"><strong>Read more..</strong></a></p><br>
     
-    <!--footer-->
-    <div class="footer">
-
-    <footer class="w3-container w3-dark-grey" style="padding:32px">
-  <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
-  
-  <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
-  <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
- 
-  <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
-    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
-</footer>
-</div>
+  <!--footer-->
+	  <div class="footer"><footer class="w3-container w3-dark-grey w3-center"  style="padding:32px">
+	    <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
+	    <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
+	    <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
+	    <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
+	    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+	    <p>@Created by Aida, Az Zahra, Azriel, Jeneva, Puji, Syahriliandika</p>
+	    </footer>
   <!-- End About Section -->
 
 </body>
