--- a/L'ingenu.html
+++ b/L'ingenu.html
@@ -95,20 +95,15 @@ Di seluruh L'Ingénu, Voltaire menganjurkan deisme, dan mencela intoleransi, fan
     </div>
   <!-- End Portfolio Section -->
   </div>
-  <!--footer-->
-    <div class="footer">
-
-    <footer class="w3-container w3-dark-grey" style="padding:32px">
-  <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
-  
-  <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
-  <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
- 
-
-  <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
-    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
-</footer>
-</div>
+<!--footer-->
+	  <div class="footer"><footer class="w3-container w3-dark-grey w3-center"  style="padding:32px">
+	    <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
+	    <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
+	    <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
+	    <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
+	    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+	    <p>@Created by Aida, Az Zahra, Azriel, Jeneva, Puji, Syahriliandika</p>
+	    </footer>
   
 
 <!-- END PAGE CONTENT -->
