--- a/henri.html
+++ b/henri.html
@@ -60,7 +60,6 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-white" id="home">
     <h1 class="w3-jumbo">Voltaire's Book</h1>
     <p style="background-color:white;font-size:150%;font-color:grey;"> Frenc Enlightenment Writer </p>
-    <img src="karya2.jpg" alt="boy" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- About Section -->
@@ -99,19 +98,15 @@ ATAU Taylor edisi kritis dari La Henriade  mencurahkan volume penuh untuk pengan
   <!-- End Portfolio Section -->
   </div>
   <!--footer-->
-    <div class="footer">
-
-    <footer class="w3-container w3-dark-grey" style="padding:32px">
-  <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
-  
-  <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
-  <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
-
-
-  <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
-    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
-</footer>
-</div>
+		  <div class="footer"><footer class="w3-container w3-dark-grey w3-center"  style="padding:32px">
+		    <a href="L'ingenu.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">L'ingenu</a>
+		    <a href="henri.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">La Henriade</a>
+		    <a href="Micromégas1752.html" class="w3-button w3-black w3-padding-large w3-margin-bottom"> Micromégas1752</a>
+		    <a href="volt.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Candide</a>
+		    <a href="zadig.html" class="w3-button w3-black w3-padding-large w3-margin-bottom">Zadig</a>
+		    <p>@Created by Aida, Az Zahra, Azriel, Jeneva, Puji, Syahriliandika</p>
+		    </footer>
+    </div>
 <!-- END PAGE CONTENT -->
 </div>
 
