--- a/volt.html
+++ b/volt.html
@@ -61,7 +61,6 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-white" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">Voltaire's</span> Book</h1>
     <p>French Enlightenment writer</p>
-    <img src="/w3images/man_smoke.jpg" alt="boy" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- About Section -->
@@ -80,9 +79,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="candide1.jpg" style="width:90%">
-        <img src="candide.jpg" style="width:90%">
-        <img src="Candide.png" style="width:90%">
+        <img src="candide1.jpg" style="width:80%">
+        <img src="candide.jpg" style="width:80%">
+      </div>
+        <div class="w3-half">
+        <img src="Candide.png" style="width:80%">
       </div>
     <!-- End photo grid -->
     </div>
